--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="cursour"></div>
     <div class="container">
       <div class="text">
         <h1>Cursor Animation</h1>
